@@ -7,6 +7,9 @@
     2. /var/cache/edb/world is now /var/lib/portage/world.
     3. /etc/portage/profile/virtuals is _USER_ configs only.
 
+  06 Jun 2005; Jason Stubbs <jstubbs@gentoo.org> bin/dispatch-conf
+  pym/dispatch_conf.py: Brought forward updates in stable.
+
   29 May 2005; Mike Frysinger <vapier@gentoo.org>
   bin/ebuild-default-functions.sh:
   Add some banner messages to the compile / package steps.
